implement clock in operation
